# CDSimulation

./: .cursorrules  CMakeLists.txt  README.md  backup_README.md  database.db
src/: CMakeLists.txt  main.cpp
src/core/: database.cpp  database.h  user.cpp  user.h
src/utils/: config.cpp  config.h
src/views/: config_dialog.cpp  config_dialog.h  config_dialog.ui  login.cpp  login.h  login.ui  register.cpp  register.h  register.ui  workbench.cpp  workbench.h  workbench.ui
src/views/analysis/: acoustic_analysis_module.cpp  acoustic_analysis_module.h  acoustic_analysis_module.ui  analysis_module_base.cpp  analysis_module_base.h  dry_modal_analysis_module.cpp  dry_modal_analysis_module.h  dry_modal_analysis_module.ui  modal_analysis_module.cpp  modal_analysis_module.h  modal_analysis_module.ui  static_analysis_module.cpp  static_analysis_module.h  static_analysis_module.ui  underwater_analysis_module.cpp  underwater_analysis_module.h  underwater_analysis_module.ui  vibration_analysis_module.cpp  vibration_analysis_module.h  vibration_analysis_module.ui  wet_modal_analysis_module.cpp  wet_modal_analysis_module.h  wet_modal_analysis_module.ui
src/views/system/: approvalmanager.cpp  approvalmanager.h  approvalmanager.ui  rolemanager.cpp  rolemanager.h  rolemanager.ui  structure_hierarchy_dialog.cpp  structure_hierarchy_dialog.h  structure_hierarchy_dialog.ui  systemmanager.cpp  systemmanager.h  systemmanager.ui  user_edit_dialog.cpp  user_edit_dialog.h  user_edit_dialog.ui  usermanager.cpp  usermanager.h  usermanager.ui
